Message input field in contact page now scales with user's input rows. more rows, bigger field. Contact form styling, input fields are more in middle, but submit button still needs some work regarding styling. Created MoreDiariesPage in which user can see all of the diaries he/she has created. User can access this page from DiaryEntriesPage when clicking See all-button under Your Diaries header. NavBar fix, where it doesnt anymore go behind elements on pages.

--- a/src/Sites/Components/NavBarStyle.css
+++ b/src/Sites/Components/NavBarStyle.css
@@ -7,6 +7,7 @@
 
 .nav-bar {
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   width: 100%;
