--- a/src/Sites/DiaryQuillPageStyle.css
+++ b/src/Sites/DiaryQuillPageStyle.css
@@ -34,3 +34,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin-bottom: 300px;
 }
+
+.most-recent-written-header {
+  margin-top: 50px;
+}
